Video playback prevented on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -126,9 +126,33 @@ html, body {
   border-color: transparent transparent transparent white;
 }
 
+.button {
+  background-color: #088FFF;
+  color: black;
+  padding: 14px;
+  font-size: 1.1em;
+  width: 120px;
+  text-align: center;
+  margin-top: 20%;
+  border-radius: 2px;
+  display: none;
+}
+
+.button:hover {
+  cursor: pointer;
+}
+
 @media (max-width: 360px) {
   .arrow_right {
     display: none;
+  }
+
+  #test_video {
+    display: none;
+  }
+
+  .button {
+    display: block;
   }
 }
 
